fix empty cart design, fix fitting loading on mobile

--- a/bb-theme-child/assets/css/partials/_fitting.scss
+++ b/bb-theme-child/assets/css/partials/_fitting.scss
@@ -1,6 +1,15 @@
 .page-id-426 {
 	background-color: #000;
 
+	.loading {
+		h1 {
+			@media (max-width: 767px) {
+				font-size: 40px;
+				margin: 0 0 30px;
+			}
+		}
+	}
+
 	.fitting-facets {
 
 		// noUI styles
