--- a/bb-theme-child/assets/css/partials/_store.scss
+++ b/bb-theme-child/assets/css/partials/_store.scss
@@ -1,6 +1,6 @@
 .woocommerce-page {
 
-	.woocommerce-message {
+	.woocommerce-message, .cart-empty.woocommerce-info {
 		background-color: $on-dark-bg;
 		border: none;
 		color: #FFF;
